--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -479,6 +479,18 @@ ul.navbar-nav {
     background-color: #ffa726;
 }
 /*botones*/
+.ruler-img {
+    width: 5%;
+    height: 5%;
+}
+.ruler{
+    left: 2%;
+    position: relative;
+}
+.ruler-img:hover {
+    transform: scale(1.1);
+
+}
 #playButton {
     display: flex;
     align-items: center;
@@ -808,9 +820,9 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-top: 50px;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 0px;
+    
 
 }
 .play-button {
@@ -923,7 +935,7 @@ nav {
     height: auto;
     position: relative;
     animation: glitch 1s infinite;
-    margin-bottom: 0px;
+    margin-top: -50px;
     margin-left: -20%;
     animation: swashIn 1s ease-in-out, gameVertical 2s infinite alternate ease-in-out;
     transition: transform 200ms ease-in-out, box-shadow 200ms ease-in-out;
@@ -1090,7 +1102,7 @@ nav {
     }
     /*titulo*/
     .menu-title {
-        margin-bottom: 15%;
+        margin-bottom: 0%;
         font-size: 2.9em;
         border-radius: 50px; 
         text-align:left;
