--- a/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
+++ b/PROYECTO-MJC memoorize/multijugador/crearSala/css/crearSala.css
@@ -1,79 +1,135 @@
-body{
+body {
     background-image: url(../../../img/fondo4.gif);
-    background-size: 100% 100%;
-    background-attachment:fixed;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: 'Pirata One', cursive; 
     background-repeat: no-repeat;
 }
 
-.logo{
-    width: 30vh;
-    height: 30vh;
-    position:relative;
-    left: 97vh;
-    top: 3vh;  
-    
+@keyframes moveLogoVertical {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(10px); }
 }
 
-.container{
-    background-color: rgb(255, 255, 255,0.5);
-    width: 85vh;
-    height: 60vh;
-    border-radius: 20px;
+.container {
+    width: 40%;
+    height: auto;
+    text-shadow: 3px 3px 0px #ffffff07, 6px 6px 0px #8b451300;  
     position: relative;
-    top: 7vh;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 30px; 
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
+    top: 15vh;
 }
 
-.configuracionSala{
-    
+.menu-title {
+    font-family: 'Pirata One', cursive; 
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 5.0rem;
+    color: #ffd700; 
+    text-shadow: 3px 3px 0px #000000, 6px 6px 0px #8b4513;  
+    position: relative;
+    padding: 0px;
+    animation: vanishIn 1s ease-in-out;
+}
+
+.container::after {
+    content: "";
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    right: -5px;
+    bottom: -5px;
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background-size: 400%;
+    border-radius: 15px;
+    filter: blur(5px);
+    z-index: -1;
+    animation: animate 20s linear infinite;
+}
+
+@keyframes animate {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+.configuracionSala,
+.configuracionSala1,
+.configuracionSala2 {
     width: 50vh;
-    height: 9vh;
-    border-radius: 15%;
+    height: auto;
+    border-radius: 15px;
     position: relative;
-    top: 6vh;
-    left: 16vh;
+    margin: 0 auto;
     transition: 100ms;
     padding: 2vh 3vh;
 }
 
-.configuracionSala2{
-    
-    width: 50vh;
-    height: 9vh;
-    border-radius: 15%;
-    position: relative;
-    top: 6vh;
-    left: 16vh;
-    transition: 100ms;
-    padding: 4vh 3vh;
-}
-
-.configuracionSala1{
-    
-    width: 50vh;
-    height: 9vh;
-    border-radius: 15%;
-    position: relative;
-    top: 9vh;
-    left: 16vh;
-    transition: 100ms;
-    padding: 5vh 3vh;
-}
-
-.btnComparar button{
+.btnComparar button {
     border: none;
-    width: 40vh;
+    width: 30vh;
     height: 8vh;
-    border-radius: 15px;
-    position: relative;
-    bottom: -20vh;
-    left: 20vh;
-    background-color: green;
+    border-radius: 20px;
+    background: radial-gradient(circle, rgb(16, 135, 214) 0%, rgb(215, 250, 16) 100%);
+    box-shadow: 0 0 15px rgb(255, 166, 0), inset 0 0 10px rgb(44, 166, 227); 
+    color: white;
+    transition: background-color 0.3s;
 }
 
-input.input:focus{
-    background-color: rgb(0, 231, 96);
+.btnComparar button:hover {
+    background-color: #fdfdfd6e;
+    transform: scale(0.9);
 }
+
+input.input:focus {
+    background-color: #fdfdfd;
+    box-shadow: 0 0 15px rgba(255, 166, 0, 0.445), inset 0 0 10px rgb(44, 166, 227);
+}
+
 input.input:hover {  
-    background-color: rgb(0, 231, 96);
-    box-shadow: 0px 0px 10px black;
+    background-color: #fdfdfd;
+    box-shadow: 0 0 15px rgba(255, 166, 0, 0.445), inset 0 0 10px rgb(44, 166, 227); 
+}
+@media (max-width: 768px) {
+    .container {
+        width: 90%;
+        padding: 0px;
+        top: 15vh;
+        height: 400px;
+        right: 2%;
+    }
+
+    .menu-title {
+        font-size: 3rem;
+        top: 15vh;
+    }
+
+    .btnComparar button {
+        width: 170%;
+        height: 6vh;
+        bottom: 10%;
+        
+        text-align: center;
+        font-size: 1.5rem;
+    }
+
+    .configuracionSala,
+    .configuracionSala1,
+    .configuracionSala2 {
+        width: 100%;
+        margin: 10px auto;
+        padding: 1vh 2vh;
+    }
+
+    input.input {
+        font-size: 1rem;
+    }
 }
