--- a/PROYECTO-MJC memoorize/multijugador/unirseSala/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/unirseSala/css/style.css
@@ -55,7 +55,7 @@ body{
     justify-content: space-around;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     position: relative;
-    top: 7vh;
+    top: 70px;
     padding: 10px;
 }
 .container::after {
