--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -261,11 +261,10 @@ body {
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
-    background-image: url(../../../img/mapa.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /*background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);*/
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
