--- a/PROYECTO-MJC memoorize/login/recuperar/css/style.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/css/style.css
@@ -45,7 +45,7 @@ body{
     left: -5px;
     right: -5px;
     bottom: -5px;
-    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #ff0000);
     background-size: 400%;
     border-radius: 15px;
     filter: blur(5px);
