--- a/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
@@ -8,6 +8,17 @@ body {
     overflow: hidden;
     height: 100vh;
     background-repeat: no-repeat;
+    animation: puffIn 1s ease-in-out
+}
+@keyframes puffIn {
+    0% {
+        opacity: 0;
+        transform: scale(2);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 .modal-header,
 .modal-footer {
@@ -67,9 +78,10 @@ body {
     font-family: 'Pirata One', cursive; 
     text-align: left;
     font-weight: bold;
+    z-index: 10;
     text-transform: uppercase;
     left: 0%;    
-    font-size: 3.0rem;
+    font-size: 2.0rem;
     color: #ffd700; 
     bottom: 0%;
     text-shadow: 3px 3px 0px #000000,   
@@ -77,6 +89,9 @@ body {
     position: relative;
     padding: 0px;
     animation: vanishIn 1s ease-in-out
+}
+.menu-title:hover {
+    transform: scale(1.1);
 }
 .menu {
     position: fixed;
@@ -86,11 +101,10 @@ body {
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
-    background-image: url(../../../img/mapa.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /*background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);*/
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
