--- a/PROYECTO-MJC memoorize/multijugador/src/css/style.css
+++ b/PROYECTO-MJC memoorize/multijugador/src/css/style.css
@@ -5,6 +5,17 @@ body{
     background-repeat: no-repeat;
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
+    animation: puffIn 1s ease-in-out
+}
+@keyframes puffIn {
+    0% {
+        opacity: 0;
+        transform: scale(2);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 .modal-header,
   .modal-footer {
@@ -100,11 +111,10 @@ body{
     flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
-    background-image: url(../../../img/mapa.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /*background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);*/
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
