--- a/PROYECTO-MJC memoorize/views/bar.html
+++ b/PROYECTO-MJC memoorize/views/bar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga con Olas y Logo</title>
-    <link rel="stylesheet" href="../stiles/bar.css"> 
+    <link rel="stylesheet" href="../style/bar.css"> 
 </head>
 <body onload="simulateLoading()">
     <div class="center col">
