--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -1,333 +1,74 @@
-body{
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-image: url(../../../img/fondo4.gif);
     background-size: cover;
     background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
+}
+h1 {
+    margin: 20px 0;
+}
+.map-container {
+    position: relative;
+    width: 800px;
+    height: 500px;
+    background-image: url('../../../img/opcion1.png'); 
+    margin-top: 5%;
+    background-size: cover;
+    border: 4px solid #8b451300;
+    border-radius: 10px;
     overflow: hidden;
 }
-.game-container {
-    position: relative;
-    display: inline-block;
-    
-}
-.nombre-icono {
-    display: none; 
-    font-size: 1.0em; 
-    color: #ffffff; 
-    margin-top: 0px; 
-    left: 0px;
-    position: relative;
-    text-align: center; 
-}
-
-.game-description {
-    display: none;
+.level {
     position: absolute;
-    top: 85%;
-    left: 20%;
-    width: 200px;
-    background-image: url('../../../menu/img/botonw.png');
-    background-color: rgba(255, 255, 255, 0); 
-    background-size: cover; 
-    background-repeat: no-repeat;
-    background-position: center;
-    color: rgb(0, 0, 0); 
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
-    z-index: 10;
-    font-size: 1.3em; 
-    line-height: 1.6em; 
-}
-
-.game-button:hover {
-    transform: scale(1.2);
-    border: none;
-}
-.game-logo:hover {
-    transform: scale(1.1);
-    transition: transform 0.3s ease-in-out;
-}
-.modal-content {
-    border-radius: 10px; 
-    background-image: url(../../../menu/img/scene-ocean-underwater-background_1308-29689.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
-    width: 300px; 
-    height: auto; 
-    min-height: 200px; 
-    overflow: hidden;  
-    color: white; 
-    position: relative; 
-    padding: 20px; 
-}
-.modal-header {
-    background-color: #eaeaea00; 
-    color: white;
-}
-.modal-beody{
-    font-size: 21px; 
-    text-align: center; 
-}
-.modal-body {
-    font-size: 21px; 
-    text-align: center; 
-    right: 80px;
-}
-.modal-title{
-    color: black;
-}
-.modal-footer .btn-secondary {
-    background-color: #ff4646;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    top: 20px;
-    position: relative;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-}
-.modal-footer .btn-secondary:hover {
-    background-color: #ff5b5b;
-    cursor: pointer;
-}
-/* Estilo de los botones personalizados */
-.btn-custom {
-    width: 250px;
-    height: 250px;
-    border: none;
-    overflow: hidden;
-    transition: transform 0.4s ease;
-    margin: 30px;
-}
-.perfil-usuario {
-    margin-top: 20px;
-}
-
-.foto-perfil {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-bottom: 15px;
-}
-.offcanvas {
-    width: 300px;
-    height: 100%;
-    background-image: url(../../../menu/img/scene-ocean-underwater-background_1308-29689.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    overflow: hidden;  
-    color: rgba(255, 255, 255, 0); 
-    position: relative; 
-}
-
-.offcanvas::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0); 
-    z-index: 0; 
-}
-
-.offcanvas .perfil-usuario {
-    position: relative; 
-    z-index: 1; 
-}
-
-.offcanvas-backdrop {
-    background-color: transparent !important; 
-    box-shadow: none !important; 
-}
-.avatar-opcion {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: transform 0.3s ease;
-}
-
-.avatar-opcion:hover {
-    transform: scale(1.1);
-}
-.logo img{
-    width: 280px;
-    height: 280px;
-    position: relative;
-    left: 40%;
-    margin-top: 3%;
-    margin-bottom: 3%;
-}
-.niveles{
-    position: relative;
-    left: 22%;
-}
-
-.nivel{
-    width: 100px !important;
-    height: 100px;
-    background-image: url(../../../img/wordleNiveles.jpg);
-    background-size: cover;
-    border-radius: 10px;
-    margin: 1%;
-    box-shadow: 0px 0px 10px #000;
-    transition: 300ms;
-    cursor: pointer;
-    text-align: center;
-    -webkit-box-direction: unset;
-    color: rgb(0, 0, 0) !important;
-}
-.nivel h1{
-    margin: 20%;
-}
-a:link, a:visited, a:active {
-    text-decoration:none;
-    color: rgb(0, 0, 0);
-}
-.nivel:hover{
-    transform: scale(1.1);
-}
-
-.letra{
-    
-    text-shadow: 1px 1px 1px rgb(244, 244, 244);
-    text-align: center;
-    margin-top: 4px;
-    font-size: 25px;
-    font-family: serif;
-
-
-}
-
-
-
-.container{
-    position: relative;
-    left: 105px;
-
-    
-}
-
-.animacion{
+    width: 60px;
+    height: 60px;
+    background: radial-gradient(circle, rgba(214, 214, 16, 0) 0%, rgb(255, 255, 255) 100%);
+    border-radius: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #000000;
     cursor: pointer;
     transition: transform 0.3s;
 }
-
-.animacion:hover{
-    transform: scale(1.2);
+.level:hover {
+    transform: scale(1.1);
 }
 
-/*otro*/
+.level-1 { top: 100px; left: 100px; }
+.level-2 { top: 100px; left: 350px; }
+.level-3 { top: 100px; left: 650px; }
+.level-4 { top: 250px; left: 650px; }
+.level-5 { top: 250px; left: 350px; } 
+.level-6 { top: 250px; left: 100px; }
+.level-7 { top: 400px; left: 100px; }
+.level-8 { top: 400px; left: 350px; }
 
-.button-container {
-    position: relative;
-    height: 20px;
-    left: 30px;
+.ship {
+    position: absolute;
+    width: 60px;
+    transition: left 1s, top 1s; 
 }
 
-.hover-button {
+.game-section {
+    display: none;
+    text-align: center;
+    margin-top: 20px;
+}
+.game-section.active {
+    display: block;
+}
+.back-button {
+    margin-top: 20px;
     padding: 10px 20px;
-    font-size: 16px;
+    background-color: #8b4513;
+    color: white;
     border: none;
     border-radius: 5px;
-    background-color: #6200ea;
-    color: white;
     cursor: pointer;
-    transition: transform 0.3s ease;
-}
-
-.hover-button:hover {
-    transform: scale(1.2);
-}
-
-.tooltip {
-    position: absolute;
-    bottom: 100%;
-    left: 48px;
-    transform: translateX(-50%);
-    background-color: #333;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 3px;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    white-space: nowrap;
-    pointer-events: none;
-}
-
-.button-container:hover .tooltip {
-    opacity: 1;
-}
-
-/*sonido*/
-#playButton {
-    font-size: 20px;
-    padding: 10px 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgSonido{
-    width: 70px;
-    height: 70px;
-    margin-left: 30%;
-    
-}
-#playButton:hover {
-    transform: scale(1.1);
-}
-
-/*usuario*/
-#usuarioBtn{
-    font-size: 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgUsuario{
-    width: 70px;
-    height: 70px;
-}
-#usuarioBtn:hover{
-    transform: scale(1.1);
-}
-
-
-/*configuracion*/
-#configuracionBtn{
-    font-size: 20px;
-    padding: 10px 10%;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    position: relative;
-    left: 10%;
-    top: 2%;
-}
-.imgConfiguracion{
-    width: 70px;
-    height: 70px;
-    
-}
-.avatarBoton{
-    width: 70px;
-    height: 70px;
-    position: relative;
-    left: 100%; 
-}
-#configuracionBtn:hover {
-    transform: scale(1.1);
 }
