--- a/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/css/style.css
@@ -12,7 +12,7 @@ body {
     position: relative;
     width: 900px;
     height: 500px;
-    background-image: url('../../../img/icon/regresar.png'); 
+    background-image: url('../../../img/so.avif'); 
     margin-top: 9%;
     background-size: cover;
     border: 4px solid #ffffff;
