--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -1,9 +1,10 @@
 body{
     background-image: url(../../../../img/fondo4.gif);
     background-repeat: no-repeat;
+    overflow: hidden;
     background-size: 100% 100%;
     background-attachment: fixed;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Pirata One', cursive; 
 }
 
 .imgLogo{
@@ -12,16 +13,24 @@ body{
     position: relative;
     left: 27%;
 }
-.conteinerJuego{
-    background-image: url(../../../../img/wordle.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+.conteinerJuego {
+    position: relative;
     width: 800px;
-    height: 600px;
+    height: 500px;
     margin: auto;
     border-radius: 15px;
+    overflow: hidden;
 }
+
+.imagenFondo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 .main-container{
     display: flex;
     flex-direction: column;
@@ -40,6 +49,7 @@ body{
     background-color: transparent;
     width: 85px;
     height: 85px;
+    z-index: 10;
     border: none;
     outline: none;
     font-size: 35px;
@@ -56,9 +66,9 @@ body{
     display: flex;
 }
 .button{
-    width: 50px;
-    height: 50px;
-    border-radius: 100%;
+    width: 80px;
+    height: 80px;
+    border-radius: 20%;
     border: none;
     background-color: rgb(31, 122, 31);
     font-size: 20px;
@@ -73,6 +83,7 @@ body{
     background-image:url(../../../../img/input/oro.png);
     background-repeat: no-repeat;
     background-size: 100% 99%;
+    z-index: 10;
     -webkit-text-fill-color: rgb(0, 0, 0);
     -webkit-text-stroke: 1px rgb(255, 255, 255);
 }
@@ -82,6 +93,7 @@ body{
     background-size: 100% 99%;
     -webkit-text-fill-color: rgb(0, 0, 0);
     -webkit-text-stroke: 1px rgb(255, 255, 255);
+    z-index: 10;
 }
 .no{
     background-color: rgb(0, 0, 0);
@@ -90,11 +102,12 @@ body{
 }
 .modal-content {
     border-radius: 10px; 
-    background-image: url(../../../../img/wordle.jpg);
+    background-image: url(../../../../img/xsi.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
     width: 300px; 
+    z-index: 10;
     height: auto; 
     min-height: 200px; 
     overflow: hidden;  
@@ -105,22 +118,109 @@ body{
 .text{
     font-size: 20px;
 }
+#contador {
+    background-image: url('../../../../img/relog.png');
+    background-size: 40px 40px;
+    background-repeat: no-repeat;
+    background-color: #ffffff5f;
+    width: max-content;
+    padding: 0px 0px;
+    border: 3px solid #3b2944;
+    font-family: 'Pirata One', cursive; 
+    font-size: 200%;
+    z-index: 10;
+    box-shadow: 0 4px 0 #4ad5ff;
+    padding-left: 50px; /* Ajusta según el tamaño del icono */
+}
 #pista{
     display:flex;
     justify-content: flex-end;
     color: black;
-    font-size: medium !important;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 110%;
+    
 }
-.pistas{
+.back-button {
+    left: 1%;
+    bottom: 83%;
+    position: fixed;
+}
+.back-button-img{
+    width: 20%;
+    height: 20%;
+}
+.menu {
+    position: fixed;
+    top: 10px;
+    right: 10px;
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 250px;
-    height: 200px;
-    background-image: url(../../../../img/mapa.jpg);
+    z-index: 10;
+    flex-direction: row-reverse;
+    justify-content: center;
+    align-items: center;
     background-repeat: no-repeat;
     background-position: center;
-    background-size: cover; 
-    border-radius: 15px 15px 0px 15px;
+    background-size: cover;
+    background: radial-gradient(circle, rgb(214, 214, 16) 0%, rgb(16, 137, 250) 100%);
+    border-radius: 10px;
+    padding: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.menu:hover {
+    transform: scale(1.1);
+
+}
+.soundButton, #musicButton {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.imgSonido {
+    width: 40px;
+    height: auto;
+}
+
+#musicButton p {
+    margin: 0;
+    font-size: 14px;
+    text-align: center;
+}
+.modal-footer .btn-secondary {
+    background-color: #ffcc00;; 
+    color: #ffffff;
+    
+    font-family: 'MedievalSharp', cursive; 
+    font-size: 18px; 
+    padding: 8px 8px; 
+    border: 2px solid #deb5115b; 
+    border-radius: 5px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2); 
+    transition: all 0.3s ease; 
+}
+
+.modal-footer .btn-secondary:hover {
+    background-color: #ffdf61; 
+    color: #333; 
+    transform: scale(1.05); 
+    box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3); 
+}
+.menu-title {
+    font-family: 'Pirata One', cursive; 
+    
+    z-index: 10;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    left: 0%;    
+    font-size: 2.8rem;
+    color: #ffd700; 
+    bottom: 0%;
+    text-shadow: 3px 3px 0px #000000,   
+                 6px 6px 0px #8b4513;  
+    position: relative;
+    padding: 0px;
+}
+@media (max-width: 768px) {
+    
 }
