--- a/PROYECTO-MJC memoorize/views/bar.html
+++ b/PROYECTO-MJC memoorize/views/bar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barra de Carga con Olas y Logo</title>
     <link rel="stylesheet" href="../style/bar.css"> 
+    <link rel="stylesheet" href="../style/principal.css">
 </head>
 <body onload="simulateLoading()">
     <div class="center col">
