--- a/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 4x4/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/juego rompe/rompecabeza 4x4/css/style.css
@@ -6,6 +6,18 @@
     background-position: center;
     overflow: hidden;
 }
+.back-button {
+  left: 2%;
+  bottom: 91%;
+  position: fixed;
+}
+.back-button:hover {
+  transform: scale(0.9);
+}
+.back-button-img{
+  width: 22%;
+  height: 22%;
+}
 h2{
     font-weight:normal;
     text-align:center;
