--- a/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
+++ b/PROYECTO-MJC memoorize/juego3/estilos/estilo_cartas.css
@@ -18,6 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     z-index: 10;
+    display: none;
 }
 
 .modal-content {
@@ -81,6 +82,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18pt;
     font-weight: bold;
+    
 }
 .disabled {
     color: #757575;
