--- a/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
+++ b/PROYECTO-MJC memoorize/multijugador/sala/css/sala.css
@@ -93,6 +93,7 @@ body {
 .menu-title:hover {
     transform: scale(1.1);
 }
+
 .menu {
     position: fixed;
     top: 10px;
@@ -118,7 +119,21 @@ body {
     border: none;
     cursor: pointer;
 }
-
+#chatButton {
+    background: none;
+    border: none;
+    position: absolute;
+    left: 1%;
+    bottom: 76%;
+    
+}
+.imgChat{
+    width: 50px;
+    height: 50px;
+}
+#chatButton:hover {
+    transform: scale(1.1);
+}
 .imgSonido {
     width: 40px;
     height: auto;
