--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -722,6 +722,18 @@ img.imgSonido {
     border: 2px solid transparent;
     transition: border 0.3s;
 }
+.avatar-option3 {
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; 
+    justify-content: center; 
+    cursor: pointer;
+    border: 2px solid transparent;
+    transition: border 0.3s;
+}
 .avatar-icon {
     width: 20px; 
     height: 20px; 
@@ -731,6 +743,9 @@ img.imgSonido {
     border: 2px solid blue; 
 }
 .avatar-option2:hover {
+    border: 2px solid blue; 
+}
+.avatar-option3:hover {
     border: 2px solid blue; 
 }
 #editProfileForm .form-label {
